Convert all 'flex: 1' to 'flex: 1 1 auto' to prevent collapse bug, fixes #56

--- a/sass/px-app-nav-group.scss
+++ b/sass/px-app-nav-group.scss
@@ -31,7 +31,7 @@ $px-app-nav-group-height: var(--px-app-nav-height, calculateRem(60px));
   overflow: hidden;
 }
 px-app-nav-item {
-  flex: 1;
+  flex: 1 1 auto;
 }
 
 $px-app-nav-group-background-color: var(--px-app-nav-subitem-background-color, white); // Same background color as subitem
