--- a/sass/px-app-nav-item.scss
+++ b/sass/px-app-nav-item.scss
@@ -116,7 +116,7 @@ $px-app-nav-item-background-color--empty: var(--px-app-nav-item-background-color
 }
 :host([overflowed]) .app-nav-item__label,
 :host([collapsed]) .app-nav-item__label {
-  flex: 1;
+  flex: 1 1 auto;
 }
 .app-nav-item__label--empty {
   display: block;
